# DAPINet

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
datasets/real_world/: BreastTissue.npz  BreastWisconsin.npz  Ecoli.npz  Glass.npz  Haberman.npz  Ionosphere.npz  Iris.npz  Movement_libras.npz  Musk.npz  Parkinsons.npz  Segmentation.npz  SonarAll.npz  Spectf.npz  Transfusion.npz  Vehicle.npz  VertebralColumn.npz  Vowel_context.npz  Wine.npz  WineQualityRed.npz  Yeast.npz  real_world_oracle_54996450.err  real_world_oracle_54996450.out
models/DAPINet/: checkpoint_fold_1.pth  checkpoint_fold_2.pth  checkpoint_fold_3.pth  checkpoint_fold_4.pth  checkpoint_fold_5.pth  training_history.json
notebooks/: 00_structure_openml.ipynb  01_config_coverage.ipynb  02_synthetic_test_inference.ipynb  03_real_world_CVIs.ipynb  04_real_world_inference.ipynb  05_oracle_mapped_method_comparison.ipynb  06_ablation_evaluation.ipynb  07_dataset_ablation_comparison.ipynb  08_time_performance_full_results.ipynb  09_time_performance_plot.ipynb  10_failure_cases.ipynb  11_training_plots.ipynb
results/: DAPINet_inference_time.csv  DAPINet_results.csv  automl_results.csv  automl_runtime_results.csv  cvi_calinski_harabasz.csv  cvi_davies_bouldin.csv  cvi_dunn.csv  cvi_results.csv  cvi_silhouette.csv  cvi_times.csv  full_results.csv  generated_configs.csv  method_oracle_mapped_table.csv  oracle_ari.csv  oracle_time.csv  training_metrics.csv
scripts/: 01_generate_datasets.py  02_clustering_datasets.py  03_train_model.py
src/dapinet/clustering/: io.py  (+9 more)
(+84 files in other folders)
