[project]
name = "DAPINet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "densired>=1.2.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "pyclugen>=1.1.4",
    "repliclust>=1.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.6.6,<0.7"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "openml>=0.15.1",
    "pre-commit>=4.3.0",
    "pycairo>=1.29.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pypi"
# The URL is optional for PyPI, but defining the index helps explicit resolution.
# Alternatively, we can just remove 'explicit = true' from pytorch to allow fallback,
# but keeping it explicit is safer. To mix explicit and default, we need to name the default.
url = "https://pypi.org/simple"

[tool.uv.sources]
torch = [
    { index = "pytorch", marker = "sys_platform == 'win32'" },
    { index = "pypi", marker = "sys_platform != 'win32'" },
]
